correção do atributo type

--- a/exercício.html
+++ b/exercício.html
@@ -9,11 +9,11 @@
     <h1>Formulário de cadastro</h1>
     <form>
     <br/>
-    <label for="Nome">Nome</label> <input id="Nome" type="Nome"/>
+    <label for="Nome">Nome</label> <input id="Nome" type="text"/>
     <br/>
-    <label for="E-mail">E-mail</label> <input id="E-mail" type="E-mail"/>
+    <label for="E-mail">E-mail</label> <input id="E-mail" type="email"/>
     <br/>
-    <label for="Senha">Senha</label> <input id="Senha" type="Senha"/>
+    <label for="Senha">Senha</label> <input id="Senha" type="password"/>
     <br/>
     <button type="submit">
         Cadastrar
